@@ -35,13 +35,10 @@
 #include <gtk/gtk.h>
 
 #include <libgnome/gnome-i18n.h>
-#include <libgnome/gnome-config.h>
 #include <bonobo-activation/bonobo-activation.h>
 #include <gdk/gdkx.h>
 #include <gdk/gdk.h>
-#include <libgnomeui/gnome-init.h>
-#include <libgnomeui/gnome-dialog-util.h>
-#include <libgnomeui/gnome-dialog.h>
+#include <libgnomeui/gnome-ui-init.h>
 #include <libgnomeui/gnome-canvas-init.h>
 
 #include "oafgnome.h"
